# realtime_graphics

./: .gitignore  CMakeLists.txt
00_HW-DoF/: CMakeLists.txt  main.cpp  renderer.hpp
00_HW-DoF/shaders/: compositing.fragment.glsl  dof.fragment.glsl  dof.program  gaussian_blur.fragment.glsl  gaussian_blur.program
04_deffered/shaders/: compositing.fragment.glsl  material_deffered.fragment.glsl  material_deffered.vertex.glsl
05_shaders/: main.cpp  renderer.hpp
06_noise/: scene_definition.hpp
07_3d_textures/: scene_definition.hpp
08_webgl/webgl/doom/: main.js  scene.js  shaders.js
09_compute/shaders/: convolution.compute.glsl
11_opencl/: README.md  cl_utils.hpp  conway.cpp  diffusion.cpp
12_l-system/: CMakeLists.txt  l_system_generator.hpp  main.cpp  scene_definition.hpp
12_l-system/rules/: tree_03.rule
